@@ -1,7 +1,9 @@
 axis <- function(side, at=NULL, labels=TRUE, tick=TRUE, line=0, pos=NA,
-                 outer=FALSE, font=NA, vfont=NULL, ...) {
+                 outer=FALSE, font=NA, vfont=NULL,
+                 lty = "solid", lwd = 1, col=NULL, ...) {
     if (!is.null(vfont))
 	vfont <- c(typeface = pmatch(vfont[1], Hershey$typeface) - 1,
 		   fontindex= pmatch(vfont[2], Hershey$fontindex))
-    .Internal(axis(side, at, labels, tick, line, pos, outer, font, vfont, ...))
+    .Internal(axis(side, at, labels, tick, line, pos, outer, font, vfont,
+                   lty, lwd, col, ...))
 }
