@@ -117,7 +117,7 @@ void ProcessInlinePars(SEXP s, DevDesc *dd, SEXP call)
 	    if (isList(CAR(s)))
 		ProcessInlinePars(CAR(s), dd, call);
 	    else if (TAG(s) != R_NilValue)
-	    Specify2(CHAR(PRINTNAME(TAG(s))), CAR(s), dd, call);  
+	    Specify2(CHAR(PRINTNAME(TAG(s))), CAR(s), dd, call);
 	    s = CDR(s);
 	}
     }
@@ -794,18 +794,18 @@ SEXP CreateAtVector(double *axp, double *usr, int nint, Rboolean logflag)
 
 SEXP do_axis(SEXP call, SEXP op, SEXP args, SEXP env)
 {
-    /* axis(side, at, labels, tick,
-     *	     line, pos, outer, font, vfont, ...) */
+    /* axis(side, at, labels, tick, line, pos,
+     *      outer, font, vfont, lty, lwd, col, ...) */
 
     SEXP at, lab, vfont;
-    int col, fg, font;
+    int col, font, lty;
     int i, n, nint = 0, ntmp, side, *ind, outer;
     int istart, iend, incr;
     Rboolean dolabels, doticks, logflag = FALSE;
     Rboolean vectorFonts = FALSE;
     double x, y, temp, tnew, tlast;
     double axp[3], usr[2];
-    double gap, labw, low, high, line, pos;
+    double gap, labw, low, high, line, pos, lwd;
     double axis_base, axis_tick, axis_lab, axis_low, axis_high;
 
     SEXP originalArgs = args, label;
@@ -855,7 +855,7 @@ SEXP do_axis(SEXP call, SEXP op, SEXP args, SEXP env)
     }
     args = CDR(args);
 
-    /* Required argument: "ticks" */
+    /* Required argument: "tick" */
     /* This indicates whether or not ticks and the axis line */
     /* should be plotted: TRUE => show, FALSE => don't show. */
 
@@ -864,10 +864,10 @@ SEXP do_axis(SEXP call, SEXP op, SEXP args, SEXP env)
     args = CDR(args);
 
     /* Optional argument: "line" */
-    /* Specifies an offset outward from the plot for the axis. */
-    /* The values in the par value "mgp" are interpreted */
-    /* relative to this value. */
 
+    /* Specifies an offset outward from the plot for the axis.
+     * The values in the par value "mgp" are interpreted
+     * relative to this value. */
     line = asReal(CAR(args));
     if (!R_FINITE(line)) line =	 Rf_gpptr(dd)->mgp[2];
     args = CDR(args);
@@ -903,6 +903,17 @@ SEXP do_axis(SEXP call, SEXP op, SEXP args, SEXP env)
 	vectorFonts = TRUE;
     args = CDR(args);
 
+    /* Optional argument: "lty" */
+    lty = asInteger(FixupLty(CAR(args), NA_INTEGER));
+    args = CDR(args);
+
+    /* Optional argument: "lwd" */
+    lwd = asReal(FixupLwd(CAR(args), Rf_gpptr(dd)->lwd));
+    args = CDR(args);
+
+    /* Optional argument: "col" */
+    col = asInteger(FixupCol(CAR(args), Rf_gpptr(dd)->fg));
+    args = CDR(args);
 
     /* Retrieve relevant "par" values. */
 
@@ -970,9 +981,8 @@ SEXP do_axis(SEXP call, SEXP op, SEXP args, SEXP env)
     if (n == 0)
 	errorcall(call, "no locations are finite");
 
-    /* Ok, all systems are "GO".  Let's get to it. */
-    /* First we process all the inline par values. */
-
+    /* Ok, all systems are "GO".  Let's get to it.
+     * First we process all the remaining inline par values */
     GSavePars(dd);
     ProcessInlinePars(args, dd, call);
 
@@ -987,12 +997,11 @@ SEXP do_axis(SEXP call, SEXP op, SEXP args, SEXP env)
 	return R_NilValue;
     }
 
-    /* I can't think of a good reason to allow axes with a non-solid line-type,
-     * so I override any value the user may have specified.
-     * This may need to be revisited, but this should
-     * cover 99.99% of the cases. */
 
-    Rf_gpptr(dd)->lty = LTY_SOLID;
+    /* no! we do allow an `lty' argument -- will not be used often though
+     *  Rf_gpptr(dd)->lty = LTY_SOLID; */
+    Rf_gpptr(dd)->lty = lty;
+    Rf_gpptr(dd)->lwd = lwd;
 
     /* Override par("xpd") and force clipping to figure region.
      * NOTE: don't override to _reduce_ clipping region */
@@ -1002,8 +1011,7 @@ SEXP do_axis(SEXP call, SEXP op, SEXP args, SEXP env)
     Rf_gpptr(dd)->adj = 0.5;
     Rf_gpptr(dd)->font = (font == NA_INTEGER)? Rf_gpptr(dd)->fontaxis : font;
     Rf_gpptr(dd)->cex = Rf_gpptr(dd)->cexbase * Rf_gpptr(dd)->cexaxis;
-    col = Rf_gpptr(dd)->col;
-    fg = Rf_gpptr(dd)->fg;
+    /* no!   col = Rf_gpptr(dd)->col; */
 
     /* Draw the axis */
     GMode(1, dd);
@@ -1020,9 +1028,11 @@ SEXP do_axis(SEXP call, SEXP op, SEXP args, SEXP env)
 		axis_base = GConvertY(0.0, outer, NFC, dd)
 		    - GConvertYUnits(line, LINES, NFC, dd);
 	    if (R_FINITE(Rf_gpptr(dd)->tck))
-		axis_tick = axis_base + GConvertYUnits(Rf_gpptr(dd)->tck, NPC, NFC, dd);
+		axis_tick = axis_base +
+			GConvertYUnits(Rf_gpptr(dd)->tck, NPC, NFC, dd);
 	    else
-		axis_tick = axis_base + GConvertYUnits(Rf_gpptr(dd)->tcl, LINES, NFC, dd);
+		axis_tick = axis_base +
+			GConvertYUnits(Rf_gpptr(dd)->tcl, LINES, NFC, dd);
 	}
 	else {
 	    if (R_FINITE(pos))
@@ -1036,7 +1046,7 @@ SEXP do_axis(SEXP call, SEXP op, SEXP args, SEXP env)
 		axis_tick = axis_base - GConvertYUnits(Rf_gpptr(dd)->tcl, LINES, NFC, dd);
 	}
 	if (doticks) {
-	    Rf_gpptr(dd)->col = fg;
+	    Rf_gpptr(dd)->col = col;/*was fg */
 	    GLine(axis_low, axis_base, axis_high, axis_base, NFC, dd);
 	    for (i = 0; i < n; i++) {
 		x = REAL(at)[i];
@@ -1059,10 +1069,10 @@ SEXP do_axis(SEXP call, SEXP op, SEXP args, SEXP env)
 		+ GConvertYUnits(Rf_gpptr(dd)->mgp[1], LINES, NFC, dd)
 		+ GConvertY(0.0, NPC, NFC, dd);
 	}
-	else {
+	else { /* side == 3 */
 	    axis_lab = axis_base
 		+ GConvertYUnits(Rf_gpptr(dd)->mgp[1], LINES, NFC, dd)
-		- GConvertY(1.0, NPC, NFC, dd);
+ 		- GConvertY(1.0, NPC, NFC, dd);
 	}
 	axis_lab = GConvertYUnits(axis_lab, NFC, LINES, dd);
 
@@ -1100,7 +1110,7 @@ SEXP do_axis(SEXP call, SEXP op, SEXP args, SEXP env)
 			    tnew - tlast >= gap) {
 			    label = STRING_ELT(lab, ind[i]);
 			    if(label != NA_STRING) {
-				GMtext(CHAR(label), side, axis_lab, 0, x, 
+				GMtext(CHAR(label), side, axis_lab, 0, x,
 				       Rf_gpptr(dd)->las, dd);
 				tlast = temp + 0.5 *labw;
 			    }
@@ -1139,7 +1149,7 @@ SEXP do_axis(SEXP call, SEXP op, SEXP args, SEXP env)
 		axis_tick = axis_base - GConvertXUnits(Rf_gpptr(dd)->tcl, LINES, NFC, dd);
 	}
 	if (doticks) {
-	    Rf_gpptr(dd)->col = fg;
+	    Rf_gpptr(dd)->col = col;/*was fg */
 	    GLine(axis_base, axis_low, axis_base, axis_high, NFC, dd);
 	    for (i = 0; i < n; i++) {
 		y = REAL(at)[i];
@@ -1163,7 +1173,7 @@ SEXP do_axis(SEXP call, SEXP op, SEXP args, SEXP env)
 		+ GConvertXUnits(Rf_gpptr(dd)->mgp[1], LINES, NFC, dd)
 		+ GConvertX(0.0, NPC, NFC, dd);
 	}
-	else {
+	else { /* side == 4 */
 	    axis_lab = axis_base
 		+ GConvertXUnits(Rf_gpptr(dd)->mgp[1], LINES, NFC, dd)
 		- GConvertX(1.0, NPC, NFC, dd);
@@ -1205,7 +1215,7 @@ SEXP do_axis(SEXP call, SEXP op, SEXP args, SEXP env)
 			    tnew - tlast >= gap) {
 			    label = STRING_ELT(lab, ind[i]);
 			    if(label != NA_STRING) {
-				GMtext(CHAR(label), side, axis_lab, 0, y, 
+				GMtext(CHAR(label), side, axis_lab, 0, y,
 				       Rf_gpptr(dd)->las, dd);
 				tlast = temp + 0.5 *labw;
 			    }
@@ -2033,10 +2043,10 @@ SEXP do_text(SEXP call, SEXP op, SEXP args, SEXP env)
 			   INTEGER(vfont)[0], INTEGER(vfont)[1],
 			   adjx, adjy, Rf_gpptr(dd)->srt, dd);
 	    } else if (isExpression(txt)) {
-		GEMathText(toDeviceX(xx, GE_INCHES, (GEDevDesc*) dd), 
-			   toDeviceY(yy, GE_INCHES, (GEDevDesc*) dd), 
+		GEMathText(toDeviceX(xx, GE_INCHES, (GEDevDesc*) dd),
+			   toDeviceY(yy, GE_INCHES, (GEDevDesc*) dd),
 			   VECTOR_ELT(txt, i % ntxt),
-			   adjx, adjy, Rf_gpptr(dd)->srt, 
+			   adjx, adjy, Rf_gpptr(dd)->srt,
 			   Rf_gpptr(dd)->col, Rf_gpptr(dd)->gamma,
 			   Rf_gpptr(dd)->font, Rf_gpptr(dd)->cex,
 			   Rf_gpptr(dd)->ps, (GEDevDesc*) dd);
@@ -2439,7 +2449,7 @@ SEXP do_title(SEXP call, SEXP op, SEXP args, SEXP env)
 	if (isExpression(Main)) {
 	    GConvert(&hpos, &vpos, where, DEVICE, dd);
 	    GEMathText(hpos, vpos,
-		      VECTOR_ELT(Main, 0), adj, 0.5, 0.0, 
+		      VECTOR_ELT(Main, 0), adj, 0.5, 0.0,
 		       Rf_gpptr(dd)->col, Rf_gpptr(dd)->gamma,
 		       Rf_gpptr(dd)->font, Rf_gpptr(dd)->cex,
 		       Rf_gpptr(dd)->ps, (GEDevDesc*) dd);
@@ -2629,10 +2639,10 @@ SEXP do_abline(SEXP call, SEXP op, SEXP args, SEXP env)
     PROTECT(col = FixupCol(CAR(args), NA_INTEGER));	args = CDR(args);
     ncol = LENGTH(col);
 
-    PROTECT(lty = FixupLty(CAR(args), Rf_gpptr(dd)->lty));	args = CDR(args);
+    PROTECT(lty = FixupLty(CAR(args), Rf_gpptr(dd)->lty)); args = CDR(args);
     nlty = length(lty);
 
-    PROTECT(lwd = FixupLwd(CAR(args), Rf_gpptr(dd)->lwd));	args = CDR(args);
+    PROTECT(lwd = FixupLwd(CAR(args), Rf_gpptr(dd)->lwd)); args = CDR(args);
     nlwd = length(lwd);
 
     GSavePars(dd);
@@ -2930,7 +2940,7 @@ SEXP do_identify(SEXP call, SEXP op, SEXP args, SEXP env)
 	draw = CAR(args);
 	n = length(x);
 	for (i=0; i<n; i++) {
-	    plot = LOGICAL(ind)[i]; 
+	    plot = LOGICAL(ind)[i];
 	    if (LOGICAL(draw)[0] && plot) {
 		xi = REAL(x)[i];
 		yi = REAL(y)[i];
@@ -3044,7 +3054,7 @@ SEXP do_identify(SEXP call, SEXP op, SEXP args, SEXP env)
     }
 }
 
-
+#ifdef using_internal_dotplot
 SEXP do_dotplot(SEXP call, SEXP op, SEXP args, SEXP env)
 {
     SEXP x, labs, offset, saveargs;
@@ -3063,7 +3073,7 @@ SEXP do_dotplot(SEXP call, SEXP op, SEXP args, SEXP env)
     x = CAR(args); args = CDR(args);		/* real */
     labs = CAR(args); args = CDR(args);		/* character */
     offset = CAR(args); args = CDR(args);	/* logical */
-#ifdef NEW
+#ifdef OLD
     colors = CAR(args); args = CDR(args);	/* integer */
     ltypes = CAR(args); args = CDR(args);	/* integer */
 #endif
@@ -3151,6 +3161,7 @@ SEXP do_dotplot(SEXP call, SEXP op, SEXP args, SEXP env)
 	recordGraphicOperation(op, saveargs, dd);
     return R_NilValue;
 }
+#endif /* using_internal_dotplot */
 
 
 SEXP do_strheight(SEXP call, SEXP op, SEXP args, SEXP env)
